--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="http://www.iconj.com/ico/9/n/9n658zpz24.ico" type="image/x-icon"/>
+
+    <!-- css, font, animate, aos, bootsrap -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>KAZE</title>
 </head>
 
@@ -14,48 +22,33 @@
                 <div class="tm-timeline-item-inner">
                     <div class="tm-timeline-description-wrap" align="center">
                         <div class="tm-bg-dark tm-timeline-description">
-                            <h3 class="tm-text-green tm-font-400">{{ post.title }}</h3>
+                            <h3 class="tm-text-green tm-font-400">titolo post</h3>
 
                         <!--MEDIA DELL ANTEPRIMA-->
-                            {% if post.uris %}
-                                {% if post.uris[0].split(".")[-1] in ["png", "jpg", "jpeg"]  %}
-                                    <img src= "{{ post.uris[0] }}"  alt="img_post" height="500px" width="500px">
+                                    <img src= "indirizzoimmagine"  alt="img_post" height="500px" width="500px">
                                     <br>
-                                {% elif post.uris[0].split(".")[-1] in ["mp4"] %}
                                     <video width="500px" height="500px" controls muted autoplay>
-                                        <source src="{{ post.uris[0] }}" type="video/mp4">
+                                        <source src="indirizzovideo" type="video/mp4">
                                     </video>
                                     <br>
                         <!--QUALSIASI ALTRO FILE CHE NON SIA IMMAGINE O VIDEO-->
-                                {% else %}
-                                    <a style="font-size:17px" href="{{ post.uris[0] }}">
+                                    <a style="font-size:17px" href="indirizzofile">
                                         <div>
                                             <img src= "https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png"  alt="file_image" height="60px" width="60px">
-                                            <p> {{ post.uris[0].split("/")[-1] }} </p>
+                                            <p> NOME FILE </p>
                                         </div>
                                     </a>
                                     <p></p>
                                     <!--METTO DEGLI IF NELLE DESCRIZIONI PER SAPERE SE AGGIUNGERE I 3 PUNTINI O NO-->
-                                    {% if post.description|length > 120 %}
-                                        <p>{{ post.description[:120] }}...</p>
-                                    {% else %}
-                                        <p>{{ post.description[:120] }}</p>
-                                    {% endif %}
-
-                                {% endif %}
-                            {% else %}
+                                        <p>Descrizione post abbreviata...</p>
+                                        <p>Descrizione talmente corta da non avere i 3 puntini aggiunti</p>
                                 <p></p>
                                 <!--METTO DEGLI IF NELLE DESCRIZIONI PER SAPERE SE AGGIUNGERE I 3 PUNTINI O NO-->
-                                {% if post.description|length > 200 %}
-                                    <p>{{ post.description[:200] }}...</p>
-                                {% else %}
-                                    <p>{{ post.description[:200] }}</p>
-                                {% endif %}
-                            {% endif %}
-
-                            <span class="tm-text-green">Comments ( {{ post.nComments }} ) - {{ post.dateCreated }}</span>
+                                    <p>Descrizione post abbreviata...</p>
+                                    <p>Descrizione talmente corta da non avere i 3 puntini aggiunti</p>
+                            <span class="tm-text-green">Comments ( NUMERO COMMENTI POST ) - {{ DATA CREAZIONE POST }}</span>
                             <br>
-                            <span class="tm-text-green" style="font-size:13px">TAGS = {% for tag in post.tags %} {{ tag }} {% endfor %}</span>
+                            <span class="tm-text-green" style="font-size:13px">TAGS = elenca tutti i tags</span>
                             <p><a class="tm-text-green float-right" style="font-size:20px" href="">View full post</a></p>
                         </div> 
                     </div> 
