--- a/test.html
+++ b/test.html
@@ -18,10 +18,9 @@
 <body>
 asdfasdfsad
 <!-- Place your content here -->
-<script src="//code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="./KazeWebPage/Main.js"></script>
 
 <!-- SCRIPTS -->
-<!-- Example: <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="module" src="./KazeWebPage/Main.js"></script>
 </body>
 </html>
