--- a/index.html
+++ b/index.html
@@ -4,58 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="http://www.iconj.com/ico/9/n/9n658zpz24.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/ico.ico" type="image/x-icon"/>
 
-    <!-- css, font, animate, aos, bootsrap -->
-    <link rel="stylesheet" href="css/main.css">
+    <!-- css, font, animate, aos, bootstrap -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>KAZE</title>
 </head>
 
 <body>
-    <div data-aos="zoom-in-up" class="slidein row tm-section-mb row align-items-center">
-        <div class="col-lg-8">
-            <div class="tm-timeline-item col-lg-11" align="center">
-                <div class="tm-timeline-item-inner">
-                    <div class="tm-timeline-description-wrap" align="center">
-                        <div class="tm-bg-dark tm-timeline-description">
-                            <h3 class="tm-text-green tm-font-400">titolo post</h3>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/utility.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
-                        <!--MEDIA DELL ANTEPRIMA-->
-                                    <img src= "indirizzoimmagine"  alt="img_post" height="500px" width="500px">
-                                    <br>
-                                    <video width="500px" height="500px" controls muted autoplay>
-                                        <source src="indirizzovideo" type="video/mp4">
-                                    </video>
-                                    <br>
-                        <!--QUALSIASI ALTRO FILE CHE NON SIA IMMAGINE O VIDEO-->
-                                    <a style="font-size:17px" href="indirizzofile">
-                                        <div>
-                                            <img src= "https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png"  alt="file_image" height="60px" width="60px">
-                                            <p> NOME FILE </p>
-                                        </div>
-                                    </a>
-                                    <p></p>
-                                    <!--METTO DEGLI IF NELLE DESCRIZIONI PER SAPERE SE AGGIUNGERE I 3 PUNTINI O NO-->
-                                        <p>Descrizione post abbreviata...</p>
-                                        <p>Descrizione talmente corta da non avere i 3 puntini aggiunti</p>
-                                <p></p>
-                                <!--METTO DEGLI IF NELLE DESCRIZIONI PER SAPERE SE AGGIUNGERE I 3 PUNTINI O NO-->
-                                    <p>Descrizione post abbreviata...</p>
-                                    <p>Descrizione talmente corta da non avere i 3 puntini aggiunti</p>
-                            <span class="tm-text-green">Comments ( NUMERO COMMENTI POST ) - {{ DATA CREAZIONE POST }}</span>
-                            <br>
-                            <span class="tm-text-green" style="font-size:13px">TAGS = elenca tutti i tags</span>
-                            <p><a class="tm-text-green float-right" style="font-size:20px" href="">View full post</a></p>
-                        </div> 
-                    </div> 
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12" data-aos="zoom-in">
+                <header class="text-center tm-site-header">
+                    <div class="tm-site-logo"></div>
+                    <h1 class="pl-4 tm-site-title">KAZE</h1>
+                </header>
             </div>
         </div>
-     </div>
+    </div>
+
+    <div id="posts"></div>
      
 </body>
 </html>
