--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 </head>
 
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/utility.js"></script>
     <script>
         AOS.init();
     </script>
@@ -35,6 +33,8 @@
     </div>
 
     <div id="posts"></div>
-     
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="module" src="./KazeWebPage/Main.js"></script>
 </body>
 </html>
