Sistema Asyncono per il funzionamento di tutti i componenti

--- a/test.html
+++ b/test.html
@@ -16,8 +16,9 @@
 <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-asdfasdfsad
 <!-- Place your content here -->
+asdfasdfsad
+<div id="PostsContainer"></div>
 
 <!-- SCRIPTS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
