--- a/test.html
+++ b/test.html
@@ -1,52 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
-<title>erdgrs</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Kaze</title>
 <meta name="description" content="">
 <meta name="author" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="">
+<!-- CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <!--[if lt IE 9]>
 <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 <link rel="shortcut icon" href="">
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/override.css">
 </head>
 <body>
-<!-- Place your content here -->
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-> - - - - - - - - - - - - - - - - - - - - -></br>
-<div id="PostsContainer"></div>
+    <!-- Place your content here -->
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <img src="./favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search post by ID" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+        <!-- Navbar content -->
+    </header>
+
+    <!-- Contein Fuild-->
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                </div>
+                <div class="col-sm" id="PostsContainer">
+                    <br/>
+                </div>
+                <div class="col-sm">
+                </div>
+            </div>
+        </div>
+    </div>
+
+ばかやろいあだごっめねおんとに　<br/>
 
 <!-- SCRIPTS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="module" src="./KazeWebPage/Main.js"></script>
+<!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script type="module" src="./KazeWebPage/Main.js"></script>
 </body>
 </html>
