--- a/test.html
+++ b/test.html
@@ -20,10 +20,11 @@
 <body>
     <!-- Place your content here -->
     <header>
+        
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <img src="./favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Kaze</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -59,22 +60,17 @@
         <!-- Navbar content -->
     </header>
 
-    <!-- Contein Fuild-->
-    <div class="container-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                </div>
-                <div class="col-sm" id="PostsContainer">
-                    <br/>
-                </div>
-                <div class="col-sm">
-                </div>
+    <div class="container text-center">
+        <div class="row text-center justify-content-md-center">
+            <div class="col col-lg-2">
+
             </div>
+        <div class="col-md-auto">
+            <div class="col-sm text-center align-self-center" id="PostsContainer">
+                <br/>
+        </div>
         </div>
     </div>
-
-ばかやろいあだごっめねおんとに　<br/>
 
 <!-- SCRIPTS -->
 <!-- JS, Popper.js, and jQuery -->
