--- a/test.html
+++ b/test.html
@@ -30,9 +30,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
+                    <button id="btnHome" type="button" class="btn btn-secondary">Home</button>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
@@ -52,6 +50,13 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
+                    <span class="badge badge-danger mr-sm-2">NSFW:
+                    </span>
+                        <!-- Rounded switch -->
+                        <label class="switch mr-sm-2">
+                            <input id="isSoloAdultContentCheck" type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
                     <input class="form-control mr-sm-2" type="search" placeholder="Search post by ID" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
@@ -78,6 +83,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script type="module" src="./KazeWebPage/Main.js"></script>
+    <script type="module" src="./KazeWebPage/StartUp.js"></script>
 </body>
 </html>
