--- a/index.html
+++ b/index.html
@@ -17,6 +17,51 @@
 
 <body>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <header>
+        
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <img src="./favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+            <a class="navbar-brand" href="#">Kaze</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <button id="btnHome" type="button" class="btn btn-secondary">Home</button>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <span class="badge badge-danger mr-sm-2">NSFW:
+                    </span>
+                        <!-- Rounded switch -->
+                        <label class="switch mr-sm-2">
+                            <input id="isSoloAdultContentCheck" type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search post by ID" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+        <!-- Navbar content -->
+    </header>
 
     <div class="container">
         <div class="row">
@@ -32,6 +77,6 @@
     <div id="PostsContainer"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="module" src="./KazeWebPage/Main.js"></script>
+<script type="module" src="./KazeWebPage/StartUp.js"></script>
 </body>
 </html>
