--- a/index.html
+++ b/index.html
@@ -2,38 +2,47 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-
-    <!-- css, font, animate, aos, bootstrap -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Kaze</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>KAZE</title>
+    <link rel="stylesheet" type="text/css" href="css/override.css">
 </head>
 
 <body>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Place your content here -->
     <header>
-        
         <!-- Navbar -->
+                <!-- navbar navbar-expand-lg navbar-dark bg-dark -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <img src="./favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
             <a class="navbar-brand" href="#">Kaze</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <button id="btnHome" type="button" class="btn btn-secondary">Home</button>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a id="AddPostDetail" class="nav-link" href="#">Add Post</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Dropdown
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -50,12 +59,13 @@
                 <form class="form-inline my-2 my-lg-0">
                     <span class="badge badge-danger mr-sm-2">NSFW:
                     </span>
-                        <!-- Rounded switch -->
-                        <label class="switch mr-sm-2">
-                            <input id="isSoloAdultContentCheck" type="checkbox">
-                            <span class="slider round"></span>
-                        </label>
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search post by ID" aria-label="Search">
+                    <!-- Rounded switch -->
+                    <label class="switch mr-sm-2">
+                        <input id="isSoloAdultContentCheck" type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search post by ID"
+                        aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
@@ -63,20 +73,38 @@
         <!-- Navbar content -->
     </header>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12" data-aos="zoom-in">
-                <header class="text-center tm-site-header">
-                    <div class="tm-site-logo"></div>
-                    <h1 class="pl-4 tm-site-title">KAZE</h1>
-                </header>
+    <!-- Selection #1 Posts  -->
+    <section id="SectionPosts" class="jumbotron text-center">
+        <div class="container text-center col-sm text-center align-self-center">
+            <div class="row">
+                <div id="PostsContainer" class="col">
+
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div id="PostsContainer"></div>
+    <!-- Footer -->
+    <footer>
+        <p class="container text-center">
+            This website is built by Arutosio and HoodedRonzo <a class="badge badge-light" href="#" target="_blank">tmp</a>
+        </p>
+    </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="module" src="./KazeWebPage/StartUp.js"></script>
+    <!-- SCRIPTS -->
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="module" src="./KazeWebPage/StartUp.js"></script>
 </body>
+
 </html>
