Da sistemare il perche eleAddPost.style.visibility risulta null su StartUp.js

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
     
     <!-- Selection #2 AddPost  -->
-    <!-- <section id="SectionAddPost" class="jumbotron text-center bg-dark">
+    <section id="SectionAddPost" class="jumbotron text-center bg-dark">
         <div class="container text-center col-sm text-center align-self-center">
             <div class="row">
                 <div id="AddPostContainer" class="col">
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer>
