Primi passi per il form e gestione uris negli import. Da sistemare i bottoni e la view del form

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="module" src="./KazeWebPage/Controllers/AddPostDetailController.js"></script>
     <script type="module" src="./KazeWebPage/StartUp.js"></script>
 </body>
 
