--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" type="text/css" href="css/override.css">
@@ -88,7 +89,7 @@
 
         </div>
     </section>
-    
+
     <!-- Selection #2 AddPost  -->
     <section id="SectionAddPost" class="jumbotron text-center bg-dark">
         <div class="container text-center col-sm text-center align-self-center">
@@ -103,7 +104,8 @@
     <!-- Footer -->
     <footer>
         <p class="container text-center">
-            This website is built by Arutosio and HoodedRonzo <a class="badge badge-light" href="#" target="_blank">tmp</a>
+            This website is built by Arutosio and HoodedRonzo <a class="badge badge-light" href="#"
+                target="_blank">tmp</a>
         </p>
     </footer>
 
