Aggiunti gli switch funzionanti, da migliorare solo la grafica

--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
                     <span class="badge badge-danger mr-sm-2">NSFW:</span>
                     <!-- Rounded switch -->
                     <label class="switch mr-sm-2">
-                        <input id="isSoloAdultContentCheck" type="checkbox">
+                        <input id="isAdultContentCheck" type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <span class="badge badge-warning mr-sm-2">Just NSFW:</span>
+                    <label class="switch mr-sm-2">
+                        <input id="isSoloAdultContentCheck" type="checkbox" disabled>
                         <span class="slider round"></span>
                     </label>
                     <input class="form-control mr-sm-2" type="search" placeholder="Search post by ID"
