Aggiunto overlay sui post blurrati che ti dice cosa fare per togliere il blur, interamente funzionante

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </ul>
                 <form id="FormHomeSearch" class="form-inline my-2 my-lg-0" onsubmit="return false">
 
-                    <span class="badge badge-secondary mr-sm-2">Hide NSFW:</span>
+                    <span class="badge badge-secondary mr-sm-2">Hide All NSFW:</span>
                     <label class="switch mr-sm-2">
                         <input id="isHideNSFW" type="checkbox">
                         <span class="slider round"></span>
